<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#fff"
    android:paddingLeft="@dimen/divide"
    android:minWidth="200dp">
    <TextView 
        android:gravity="center_vertical"
        android:background="@drawable/item_bg"
        android:layout_marginTop="@dimen/divide"
        android:textSize="@dimen/text_size"
        android:textColor="#000"
        android:id="@+id/menu_add_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:clickable="true"
        android:text="@string/add_location"/>
    <TextView 
        android:gravity="center_vertical"
        android:background="@drawable/item_bg"
        android:layout_marginTop="@dimen/divide"
        android:textSize="@dimen/text_size"
        android:textColor="#000"
        android:id="@+id/menu_delete_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:clickable="true"
        android:text="@string/delete_location"/>
    <TextView 
        android:gravity="center_vertical"
        android:background="@drawable/item_bg"
        android:layout_marginTop="@dimen/divide"
        android:textSize="@dimen/text_size"
        android:textColor="#000"
        android:id="@+id/menu_refresh"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:clickable="true"
        android:text="@string/refresh"/>
    <TextView 
        android:gravity="center_vertical"
        android:background="@drawable/item_bg"
        android:layout_marginTop="@dimen/divide"
        android:textSize="@dimen/text_size"
        android:textColor="#000"
        android:id="@+id/menu_temp_unit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:clickable="true"
        android:text="@string/change_to_f"/>
    <TextView 
        android:gravity="center_vertical"
        android:background="@drawable/item_bg"
        android:layout_marginBottom="@dimen/divide"
        android:layout_marginTop="@dimen/divide"
        android:textSize="@dimen/text_size"
        android:textColor="#000"
        android:id="@+id/menu_dist_unit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:clickable="true"        
        android:text="@string/change_to_mi"/>    

</LinearLayout>